[project]
name = "pyorm"
version = "0.1.0"
description = "Type-safe, async-ready ORM for modern Python applications"
authors = [
    {name = "SeRzZzJ",email = "jc10102016@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
